<resources>
    <string name="app_name">My Application</string>
    <string name="grid_layout">GRID LAYOUT</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="men_usuario">MENÚ USUARIO</string>
    <string name="mapa">Mapa</string>
    <string name="mochilas">Mochilas</string>
    <string name="bateria">Bateria</string>
    <string name="ajustes">Ajustes</string>
    <string name="nombre">Wendy Tequilla</string>
    <string name="trabajo">Developer</string>
    <string name="seguidores_indicador">12K</string>
    <string name="completado_indicador">85%</string>
    <string name="cursos_indicador">25</string>
    <string name="seguidores">Seguidores</string>
    <string name="completado">Completado</string>
    <string name="cursos">Cursos</string>
    <string name="title_activity_perfil_usuario_1">perfil_usuario_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tab_menu">tab_menu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
