<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="espol.edu.bagtraking.ui.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="espol.edu.bagtraking.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="espol.edu.bagtraking.ui.grafica.GraficFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_grafic" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="espol.edu.bagtraking.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="espol.edu.bagtraking.ui.salir.SalirFragment"
        android:label="salir_fragment"
        tools:layout="@layout/salir_fragment" />

</navigation>